Update: Reduce hero font size + fix broken layout of "Reviews" grid items + fix JS-related console errors

--- a/wp-content/themes/bootscore-child-main/css/tailwind.css
+++ b/wp-content/themes/bootscore-child-main/css/tailwind.css
@@ -1034,6 +1034,10 @@ select {
   z-index: 1000 !important;
 }
 
+.z-\[100\] {
+  z-index: 100 !important;
+}
+
 .order-1 {
   order: 1 !important;
 }
@@ -1181,6 +1185,31 @@ select {
 .my-auto {
   margin-top: auto !important;
   margin-bottom: auto !important;
+}
+
+.-mx-1\.5 {
+  margin-left: -0.375rem !important;
+  margin-right: -0.375rem !important;
+}
+
+.-my-1\.5 {
+  margin-top: -0.375rem !important;
+  margin-bottom: -0.375rem !important;
+}
+
+.\!me-1 {
+  -webkit-margin-end: 0.25rem !important;
+          margin-inline-end: 0.25rem !important;
+}
+
+.\!me-1\.5 {
+  -webkit-margin-end: 0.375rem !important;
+          margin-inline-end: 0.375rem !important;
+}
+
+.\!ms-auto {
+  -webkit-margin-start: auto !important;
+          margin-inline-start: auto !important;
 }
 
 .-mb-10 {
@@ -1331,6 +1360,11 @@ select {
           margin-inline-start: 0px !important;
 }
 
+.ms-0\.5 {
+  -webkit-margin-start: 0.125rem !important;
+          margin-inline-start: 0.125rem !important;
+}
+
 .ms-1 {
   -webkit-margin-start: 0.25rem !important;
           margin-inline-start: 0.25rem !important;
@@ -1449,6 +1483,10 @@ select {
   display: inline !important;
 }
 
+.\!flex {
+  display: flex !important;
+}
+
 .flex {
   display: flex !important;
 }
@@ -1548,6 +1586,10 @@ select {
 .size-8 {
   width: 2rem !important;
   height: 2rem !important;
+}
+
+.\!h-2\.5 {
+  height: 0.625rem !important;
 }
 
 .\!h-6 {
@@ -1726,12 +1768,20 @@ select {
   min-height: 200px !important;
 }
 
+.min-h-\[77px\] {
+  min-height: 77px !important;
+}
+
 .min-h-full {
   min-height: 100% !important;
 }
 
 .min-h-screen {
   min-height: 100vh !important;
+}
+
+.\!w-2\.5 {
+  width: 0.625rem !important;
 }
 
 .\!w-6 {
@@ -2191,6 +2241,10 @@ select {
   justify-content: center !important;
 }
 
+.\!justify-between {
+  justify-content: space-between !important;
+}
+
 .justify-between {
   justify-content: space-between !important;
 }
@@ -2217,6 +2271,11 @@ select {
 
 .gap-8 {
   gap: 2rem !important;
+}
+
+.gap-x-1 {
+  -moz-column-gap: 0.25rem !important;
+       column-gap: 0.25rem !important;
 }
 
 .gap-x-12 {
@@ -2402,6 +2461,10 @@ select {
   align-self: flex-end !important;
 }
 
+.self-center {
+  align-self: center !important;
+}
+
 .overflow-auto {
   overflow: auto !important;
 }
@@ -2446,6 +2509,10 @@ select {
 
 .whitespace-nowrap {
   white-space: nowrap !important;
+}
+
+.\!rounded-sm {
+  border-radius: 0.125rem !important;
 }
 
 .rounded {
@@ -2576,6 +2643,11 @@ select {
   border-style: dashed !important;
 }
 
+.\!border-gray-200 {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity)) !important;
+}
+
 .border-current {
   border-color: currentColor !important;
 }
@@ -2633,6 +2705,11 @@ select {
 
 .border-t-transparent {
   border-top-color: transparent !important;
+}
+
+.\!bg-white {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
 }
 
 .bg-\[\#0d0f11\] {
@@ -2751,6 +2828,11 @@ select {
 
 .bg-white\/90 {
   background-color: rgb(255 255 255 / 0.9) !important;
+}
+
+.bg-green-50 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(240 253 244 / var(--tw-bg-opacity)) !important;
 }
 
 .bg-opacity-50 {
@@ -3020,6 +3102,11 @@ select {
   padding-right: 1.5rem !important;
 }
 
+.\!py-0\.5 {
+  padding-top: 0.125rem !important;
+  padding-bottom: 0.125rem !important;
+}
+
 .\!py-6 {
   padding-top: 1.5rem !important;
   padding-bottom: 1.5rem !important;
@@ -3178,6 +3265,16 @@ select {
 .py-9 {
   padding-top: 2.25rem !important;
   padding-bottom: 2.25rem !important;
+}
+
+.py-\[2px\] {
+  padding-top: 2px !important;
+  padding-bottom: 2px !important;
+}
+
+.py-\[1px\] {
+  padding-top: 1px !important;
+  padding-bottom: 1px !important;
 }
 
 .\!pb-6 {
@@ -3475,6 +3572,11 @@ select {
   font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
 }
 
+.\!text-sm {
+  font-size: 0.875rem !important;
+  line-height: inherit !important;
+}
+
 .text-2xl {
   font-size: 1.5rem !important;
   line-height: inherit !important;
@@ -3509,6 +3611,10 @@ select {
 
 .text-\[120\%\] {
   font-size: 120% !important;
+}
+
+.text-\[12px\] {
+  font-size: 12px !important;
 }
 
 .text-\[130\%\] {
@@ -3550,6 +3656,18 @@ select {
 .text-xs {
   font-size: 0.75rem !important;
   line-height: inherit !important;
+}
+
+.text-\[\.8rem\] {
+  font-size: .8rem !important;
+}
+
+.text-\[\.7rem\] {
+  font-size: .7rem !important;
+}
+
+.\!font-medium {
+  font-weight: 500 !important;
 }
 
 .font-\[2rem\] {
@@ -3755,6 +3873,11 @@ select {
   color: rgb(3 7 18 / var(--tw-text-opacity)) !important;
 }
 
+.text-green-600 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(22 163 74 / var(--tw-text-opacity)) !important;
+}
+
 .text-indigo-400 {
   --tw-text-opacity: 1 !important;
   color: rgb(129 140 248 / var(--tw-text-opacity)) !important;
@@ -3812,6 +3935,21 @@ select {
 
 .text-white\/90 {
   color: rgb(255 255 255 / 0.9) !important;
+}
+
+.text-green-400 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(74 222 128 / var(--tw-text-opacity)) !important;
+}
+
+.text-green-500 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(34 197 94 / var(--tw-text-opacity)) !important;
+}
+
+.text-green-800 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(22 101 52 / var(--tw-text-opacity)) !important;
 }
 
 .antialiased {
@@ -4455,6 +4593,11 @@ select {
   background-color: rgb(240 249 255 / 0.4) !important;
 }
 
+.hover\:bg-green-100:hover {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(220 252 231 / var(--tw-bg-opacity)) !important;
+}
+
 .hover\:text-brand-400:hover {
   --tw-text-opacity: 1 !important;
   color: rgb(30 117 204 / var(--tw-text-opacity)) !important;
@@ -4600,12 +4743,21 @@ select {
   --tw-ring-color: rgb(224 125 38 / var(--tw-ring-opacity)) !important;
 }
 
+.focus\:ring-green-600:focus {
+  --tw-ring-opacity: 1 !important;
+  --tw-ring-color: rgb(22 163 74 / var(--tw-ring-opacity)) !important;
+}
+
 .focus\:ring-offset-2:focus {
   --tw-ring-offset-width: 2px !important;
 }
 
 .focus\:ring-offset-gray-50:focus {
   --tw-ring-offset-color: #f9fafb !important;
+}
+
+.focus\:ring-offset-green-50:focus {
+  --tw-ring-offset-color: #f0fdf4 !important;
 }
 
 .focus-visible\:outline:focus-visible {
@@ -4717,6 +4869,16 @@ select {
 
 .selected.hs-combo-box-selected\:block {
   display: block !important;
+}
+
+.complete .hs-file-upload-complete\:bg-green-600 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity)) !important;
+}
+
+.complete.hs-file-upload-complete\:bg-green-600 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity)) !important;
 }
 
 @media (min-width: 640px) {
@@ -5451,6 +5613,10 @@ select {
 
   .md\:pb-6 {
     padding-bottom: 1.5rem !important;
+  }
+
+  .md\:pb-\[6rem\] {
+    padding-bottom: 6rem !important;
   }
 
   .md\:pb-\[85px\] {
@@ -6358,8 +6524,8 @@ select {
     padding-top: 20rem !important;
   }
 
-  .xl\:text-7xl {
-    font-size: 4.5rem !important;
+  .xl\:text-6xl {
+    font-size: 3.75rem !important;
     line-height: inherit !important;
   }
 
@@ -6369,6 +6535,11 @@ select {
 }
 
 @media (prefers-color-scheme: dark) {
+  .dark\:\!border-neutral-700 {
+    --tw-border-opacity: 1 !important;
+    border-color: rgb(64 64 64 / var(--tw-border-opacity)) !important;
+  }
+
   .dark\:border-neutral-600 {
     --tw-border-opacity: 1 !important;
     border-color: rgb(82 82 82 / var(--tw-border-opacity)) !important;
@@ -6377,6 +6548,11 @@ select {
   .dark\:border-neutral-700 {
     --tw-border-opacity: 1 !important;
     border-color: rgb(64 64 64 / var(--tw-border-opacity)) !important;
+  }
+
+  .dark\:\!bg-neutral-800 {
+    --tw-bg-opacity: 1 !important;
+    background-color: rgb(38 38 38 / var(--tw-bg-opacity)) !important;
   }
 
   .dark\:bg-blue-500 {
